<resources>
    <string name="app_name">Y Sala</string>
    <string name="icon">icon</string>
    <string name="splash_welcome">WELCOME TO Y SALA</string>
    <string name="password">Password</string>
    <string name="invalid_password">Password must be least of 8 character</string>
    <string name="email">Email Address</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account">Don\'t have an account? <b>Sign up</b></string>

    <string name="head_sign_up"><b>Hey There</b>\nCreate account to join</string>
    <string name="full_name">Full name</string>
    <string name="invalid_full_name">Full name must be least of 3 character</string>
    <string name="phone_number">+62-xxx-xxxx-xxxx</string>
    <string name="invalid_phone">Phone number must </string>
    <string name="have_account">Have an account? <b>Sign in</b></string>
    <string name="sign_up">Sign up</string>
    <string name="search_hint">Yogyakarta, Jawa Tengah</string>
    <string name="success_sign_up">Sign up successfully</string>

    <string name="discount"><i>Special Price for You</i></string>
    <string name="top_homestay"><i>Top 1 in Indonesia</i></string>
    <string name="health_covid"><i>Health Protocol Covid-19</i></string>
    <string name="booking_homestay">Booking Homestay</string>
    <string name="homestay_image">Homestay image</string>
    <string name="details">Details</string>

    <string name="back">Back</string>
    <string name="booking_now">Booking now</string>
    <string name="facilities">Facilities</string>
    <string name="details_homestay">Details Homestay</string>
    <string name="night">/ Night</string>
    <string name="date_chekin">Date Chekin</string>
    <string name="date_checkout">Date Checkout</string>
    <string name="pick_up_service">Pick-up Service</string>
    <string name="none">None</string>
    <string name="payment_method">Payment Method</string>
    <string name="paypal">Paypal</string>
    <string name="total">Total :</string>
    <string name="booking">Booking</string>
    <string name="time_pick_up">Time pick-up</string>
    <string name="pick_up_location">Pick-up Location</string>
    <string name="eat">Eat</string>
    <string name="address_pick_up">Address Pick-up</string>
    <string name="select_package">Select Package</string>
    <string name="details_payment">Details Payment</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="free">Free</string>
    <string name="number_of_people">Number of people</string>
    <string name="_0_if_no_pick_up_and_no_eat">0 if no Pick-up and no Eat</string>
    <string name="dp">DP</string>
    <string name="pay_dp">Pay DP</string>
    <string name="pay_total">Pay total</string>
    <string name="your_booking">Your Booking</string>
    <string name="bill">Bill</string>
    <string name="title_activity_profile_settings">ProfileSettings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirm">Confirm</string>
    <string name="invoice">Invoice</string>
</resources>