<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/profile_phonenumber"
        android:layout_width="242dp"
        android:layout_height="28dp"
        android:layout_marginBottom="424dp"
        android:text="@string/phone_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profile_emailaddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profile_emailaddress" />

    <TextView
        android:id="@+id/profile_emailaddress"
        android:layout_width="242dp"
        android:layout_height="28dp"
        android:layout_marginBottom="23dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/profile_phonenumber"
        app:layout_constraintEnd_toEndOf="@+id/profile_fullname"
        app:layout_constraintStart_toStartOf="@+id/profile_fullname" />

    <ImageView
        android:id="@+id/profile_profilepic"
        android:layout_width="121dp"
        android:layout_height="116dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"/>


    <TextView
        android:id="@+id/profile_fullname"
        android:layout_width="242dp"
        android:layout_height="28dp"
        android:layout_marginBottom="20dp"
        android:text="@string/full_name"
        app:layout_constraintBottom_toTopOf="@+id/profile_emailaddress"
        app:layout_constraintEnd_toEndOf="@+id/profile_profilepic"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="@+id/profile_profilepic" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="32dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/profile_profilepic"
        app:layout_constraintTop_toTopOf="@+id/profile_profilepic"
        app:srcCompat="@drawable/ic_setting" />

</androidx.constraintlayout.widget.ConstraintLayout>