<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.BookingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:text="@string/booking_homestay"
            android:textStyle="bold"
            android:textSize="@dimen/actionbar_text_size"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_alignParentEnd="true"
            android:background="@drawable/btn_round"
            android:paddingStart="@dimen/small_margin"
            android:paddingEnd="@dimen/small_margin"
            android:text="@string/back"
            android:textSize="@dimen/actionbar_text_size"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/normal_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="true"
                app:cardBackgroundColor="@color/cardColorBookingHeading">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/normal_margin"
                            android:layout_marginStart="@dimen/normal_margin"
                            android:layout_marginEnd="@dimen/normal_margin"
                            tools:text="Imutku tapi nyaman"
                            android:textStyle="bold"
                            android:textSize="@dimen/actionbar_text_size"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/tv_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/normal_margin"
                            android:layout_marginStart="@dimen/normal_margin"
                            android:layout_marginEnd="@dimen/normal_margin"
                            tools:text="Jalan indah seperti yang dibayangkan, Rt 12 Rw 10, Bantul, Yogyakarta"
                            android:textSize="@dimen/normal_text_size"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/tv_telephone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/normal_margin"
                            android:layout_marginStart="@dimen/normal_margin"
                            android:layout_marginEnd="@dimen/normal_margin"
                            tools:text="@string/phone_number"
                            android:textStyle="bold"
                            android:textSize="@dimen/normal_text_size"
                            android:textColor="@color/cardColor"
                            app:drawableStartCompat="@drawable/ic_telephone" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_homestay"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/small_margin"
                        android:layout_marginStart="@dimen/small_margin"
                        android:layout_marginEnd="@dimen/small_margin"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:contentDescription="@string/homestay_image"
                        tools:src="@color/cardColor"
                        android:scaleType="centerCrop"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_below="@id/cv_heading"
                android:layout_alignParentEnd="true"
                tools:text="Rp. 585.000,00"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_below="@id/tv_price"
                android:layout_alignParentEnd="true"
                android:text="@string/night"
                android:textSize="@dimen/normal_text_size"
                android:textColor="@android:color/black" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:layout_below="@id/tv_duration"
                android:clickable="false"
                android:focusable="true"
                app:cardBackgroundColor="@color/cardColorBookingInput"
                app:cardCornerRadius="@dimen/normal_margin"
                app:cardElevation="@dimen/normal_margin" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:layout_marginStart="@dimen/normal_margin"
                        android:layout_marginEnd="@dimen/normal_margin"
                        android:text="@string/date_chekin"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/tv_chekin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/normal_margin"
                        android:layout_marginEnd="@dimen/normal_margin"
                        android:background="@drawable/round_input_booking"
                        android:paddingStart="@dimen/activity_margin"
                        android:paddingTop="@dimen/small_margin"
                        android:paddingBottom="@dimen/small_margin"
                        android:paddingEnd="@dimen/activity_margin"
                        tools:text="10 Januari 2020"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:layout_marginStart="@dimen/normal_margin"
                        android:layout_marginEnd="@dimen/normal_margin"
                        android:text="@string/date_checkout"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/tv_checkout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/normal_margin"
                        android:layout_marginEnd="@dimen/normal_margin"
                        android:background="@drawable/round_input_booking"
                        android:paddingStart="@dimen/activity_margin"
                        android:paddingTop="@dimen/small_margin"
                        android:paddingBottom="@dimen/small_margin"
                        android:paddingEnd="@dimen/activity_margin"
                        tools:text="10 Januari 2020"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:layout_marginStart="@dimen/normal_margin"
                        android:layout_marginEnd="@dimen/normal_margin"
                        android:text="@string/pick_up_location"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/et_pick_up_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/normal_margin"
                        android:layout_marginEnd="@dimen/normal_margin"
                        android:background="@drawable/round_input_booking"
                        android:paddingStart="@dimen/activity_margin"
                        android:paddingTop="@dimen/small_margin"
                        android:paddingBottom="@dimen/small_margin"
                        android:paddingEnd="@dimen/activity_margin"
                        android:hint="@string/none"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/tv_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:layout_marginStart="@dimen/normal_margin"
                        android:layout_marginEnd="@dimen/normal_margin"
                        android:text="@string/time_pick_up"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/normal_margin"
                        android:layout_marginEnd="@dimen/normal_margin"
                        android:background="@drawable/round_input_booking"
                        android:paddingStart="@dimen/activity_margin"
                        android:paddingTop="@dimen/small_margin"
                        android:paddingBottom="@dimen/small_margin"
                        android:paddingEnd="@dimen/activity_margin"
                        android:text="@string/none"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:layout_marginStart="@dimen/normal_margin"
                        android:layout_marginEnd="@dimen/normal_margin"
                        android:text="@string/payment_method"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/tv_payment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/normal_margin"
                        android:layout_marginEnd="@dimen/normal_margin"
                        android:background="@drawable/round_input_booking"
                        android:paddingStart="@dimen/activity_margin"
                        android:paddingTop="@dimen/small_margin"
                        android:paddingBottom="@dimen/small_margin"
                        android:paddingEnd="@dimen/activity_margin"
                        android:text="@string/paypal"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@android:color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:layout_marginStart="@dimen/normal_margin"
                        android:layout_marginBottom="@dimen/normal_margin"
                        android:layout_marginEnd="@dimen/normal_margin"
                        android:weightSum="2">

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/normal_margin"
                            android:layout_marginEnd="@dimen/normal_margin"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:focusable="true"
                            app:cardBackgroundColor="@color/colorPrimary"
                            app:cardCornerRadius="@dimen/normal_margin"
                            app:cardElevation="@dimen/normal_margin" >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/small_margin"
                                    android:layout_marginStart="@dimen/normal_margin"
                                    android:layout_marginEnd="@dimen/normal_margin"
                                    android:text="@string/total"
                                    android:textSize="@dimen/normal_text_size"
                                    android:textColor="@android:color/white" />

                                <TextView
                                    android:id="@+id/tv_total_payment"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/small_margin"
                                    android:layout_marginStart="@dimen/normal_margin"
                                    android:layout_marginEnd="@dimen/normal_margin"
                                    android:layout_marginBottom="@dimen/small_margin"
                                    tools:text="Rp. 0"
                                    android:textSize="@dimen/normal_text_size"
                                    android:textColor="@android:color/white" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <Button
                            android:id="@+id/btn_booking"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginStart="@dimen/normal_margin"
                            android:layout_marginEnd="@dimen/normal_margin"
                            android:background="@drawable/btn_round"
                            android:text="@string/booking"
                            android:textSize="@dimen/normal_text_size"
                            android:textColor="@android:color/white"
                            android:ems="10"
                            android:textAllCaps="false" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>