<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/normal_margin"
        app:cardElevation="@dimen/normal_margin" >

        <LinearLayout
            android:id="@+id/homestay_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/iv_homestay"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:contentDescription="@string/homestay_image"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/bigger_text_size"
                    android:textStyle="bold"
                    tools:text="Nyaman di dalam" />

                <TextView
                    android:id="@+id/tv_booking_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_name"
                    android:layout_marginBottom="@dimen/smaller_margin"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/small_text_size"
                    tools:text="10 Januari 2021 - 15 Januari 2021" />

                <TextView
                    android:id="@+id/tv_bill_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_booking_date"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:text="@string/bill" />

                <TextView
                    android:id="@+id/tv_bill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_bill_text"
                    android:layout_marginBottom="@dimen/smaller_margin"
                    android:textColor="@android:color/white"
                    tools:text="Rp. 3.975.000.000" />

                <TextView
                    android:id="@+id/details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/normal_margin"
                    android:text="@string/details"
                    android:textColor="@color/blue_dark"
                    android:textStyle="italic|bold" />

            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Bug dibawah potongan ada yang -->
</FrameLayout>